// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatReportToMarkdown() renders a standard report 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | Skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | Skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | Passed |  |
| 🟦 | \`RunTarget(website:typecheck)\` | 4.4s | Cached |  |"
`;

exports[`formatReportToMarkdown() renders a standard report with touched files 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | Skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | Skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | Passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4.4s | Passed |  |

<details><summary><strong>Touched files</strong></summary><div>

\`\`\`
apps/web/src/index.tsx
packages/example/src/index.ts
\`\`\`

</div></details>"
`;

exports[`formatReportToMarkdown() renders attempts and flakiness 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟥 | \`RunTarget(runtime:typecheck)\` | 2.4s | Failed |  |"
`;

exports[`formatReportToMarkdown() renders comparison estimate 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
Total time: 371ms | Comparison time: 1.4s | Estimated savings: 990.8ms (10.0% faster)
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟪 | \`RunTarget(types:build)\` | 0s | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m 2s | Passed | **SLOW** |
| 🟩 | \`RunTarget(types:typecheck)\` | 1m 4s | Passed | **SLOW** |
| 🟩 | \`RunTarget(website:typecheck)\` | 34.4s | Passed |  |"
`;

exports[`formatReportToMarkdown() renders durations 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
Total time: 371ms
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟪 | \`RunTarget(types:build)\` | 0s | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m 2s | Passed | **SLOW** |
| 🟩 | \`RunTarget(types:typecheck)\` | 1m 4s | Passed | **SLOW** |
| 🟩 | \`RunTarget(website:typecheck)\` | 34.4s | Passed |  |"
`;

exports[`formatReportToMarkdown() renders errors 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟥 | \`RunTarget(types:build)\` | 0s | Failed |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m 2s | Passed | **SLOW** |"
`;

exports[`formatReportToMarkdown() renders with a limit 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
Total time: 371ms
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟪 | \`RunTarget(types:build)\` | 0s | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m 2s | Passed | **SLOW** |
| 🟩 | \`RunTarget(types:typecheck)\` | 1m 4s | Passed | **SLOW** |
| | And 1 more... | | | |

<details><summary><strong>Expanded report</strong></summary><div>

|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟩 | \`RunTarget(website:typecheck)\` | 34.4s | Passed |  |

</div></details>"
`;

exports[`formatReportToMarkdown() renders with git commit 1`] = `
"<!-- moon-run-report: unknown -->

## Run report for [59719f96](https://github.com/moonrepo/moon/commit/59719f967ddcf585da9bc7ba8730dcd2865cbdfa)
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | Skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | Skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | Passed |  |
| 🟦 | \`RunTarget(website:typecheck)\` | 4.4s | Cached |  |"
`;

exports[`formatReportToMarkdown() renders with matrix data 1`] = `
"<!-- moon-run-report: {"os":"ubuntu-latest","node-version":16} -->

## Run report \`(ubuntu-latest, 16)\`
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | Skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | Skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | Passed |  |
| 🟦 | \`RunTarget(website:typecheck)\` | 4.4s | Cached |  |

<details><summary><strong>Environment</strong></summary><div>

**OS:** Test
**Matrix:**
\`\`\`
os = ubuntu-latest
node-version = 16
\`\`\`

</div></details>"
`;

exports[`sortReport() sorts by label 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | Skipped |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | Cached |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | Passed |  |
| 🟦 | \`RunTarget(website:typecheck)\` | 4.4s | Cached |  |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | Skipped |  |"
`;

exports[`sortReport() sorts by time 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟦 | \`RunTarget(website:typecheck)\` | 4.4s | Cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | Passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | Passed |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | Cached |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | Skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | Skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | Skipped |  |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | Skipped |  |"
`;
